[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Timofey Yakovishin "]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
